Initial Pass at converting InteractiveCandlestick.vue into full page

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,10 @@ body {
     background-image: linear-gradient(-180deg, #80b6db 0%, #7da7e2 100%);
 }
 
+.stock-price-box {
+    border-radius: 25px
+}
+
 .navbar {
     text-align: center;
     width: 100%;
