--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,6 +57,7 @@ body {
 
 .fusioncharts {
     padding:1%;
+    padding-top:10%;
 }
 .buttons {
     height: 20%;
@@ -108,6 +109,7 @@ body {
 .navbar {
     text-align: center;
     width: 100%;
+    padding-top: 2%;
 
 }
 
