--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,20 +40,22 @@ body {
     height: 4vh;
 }
 
-.stock-price-box > .firstline >.live-price {
+.stock-price-box > .firstline > .live-price {
     float: left;
     padding-left: 5%;
     font-size: 225%;
     height: 37px;
 }
 
-.stock-price-box > .firstline >.price-change {
+.stock-price-box > .firstline > .price-change {
     float: right;
     padding-right: 10%;
     font-size: 100%;
     height: 37px;
     padding-top:1.5vh;
 }
+
+
 
 .fusioncharts {
     padding:1%;
@@ -104,6 +106,33 @@ body {
     color:white;
     padding-left:70px;
     text-align:left;
+}
+
+#searchnavbar {
+    background-color: #3C5A99;
+    padding: 30px;
+    margin: 0px;
+}
+
+#searchnavbar > .backicon {
+    float: left;
+    padding: 1%;
+}
+#searchnavbar > .textbox {
+    font-size: 34px;
+    color:white;
+    padding-left:70px;
+    text-align:left;
+}
+
+#searchnavbar > .SearchBox > form > input {
+    border: solid 0px;
+    width: 325px;
+    height:40px;
+    margin-left:20px;
+    padding-left:10px;
+    padding-right:10px;
+    border-radius: 10px;
 }
 
 .navbar {
