--- a/src/css/style.css
+++ b/src/css/style.css
@@ -125,13 +125,16 @@ body {
     text-align:left;
 }
 
+#searchnavbar > .SearchBox {
+    width: 55%;
+    height:40px;
+    float: right;
+}
+
 #searchnavbar > .SearchBox > form > input {
     border: solid 0px;
-    width: 325px;
+    width: 100%;
     height:40px;
-    margin-left:20px;
-    padding-left:10px;
-    padding-right:10px;
     border-radius: 10px;
 }
 
@@ -196,6 +199,18 @@ body {
   
 .navbar > li a:hover:not(.active) {
     background-color: #3C5A99;
+}
+
+.results {
+    border: solid #000;
+    margin-left:10%;
+    margin-right:10%;
+    border-radius: 10px;
+    border-width: 1px;
+    margin-top:5%;
+    margin-bottom:5%;
+    font-size:20px;
+    padding:10%;
 }
 
 .homepage {
