--- a/src/css/style.css
+++ b/src/css/style.css
@@ -55,8 +55,6 @@ body {
     padding-top:1.5vh;
 }
 
-
-
 .fusioncharts {
     padding:1%;
     padding-top:10%;
@@ -210,7 +208,26 @@ body {
     margin-top:5%;
     margin-bottom:5%;
     font-size:20px;
-    padding:10%;
+}
+
+.results > .firstline {
+    width: 100%;
+    height: 4vh;
+}
+
+.results > .firstline > .live-price {
+    float: left;
+    padding-left: 5%;
+    font-size: 225%;
+    height: 37px;
+}
+
+.results > .firstline > .price-change {
+    float: right;
+    padding-right: 10%;
+    font-size: 100%;
+    height: 37px;
+    padding-top:1.5vh;
 }
 
 .homepage {
