--- a/src/css/style.css
+++ b/src/css/style.css
@@ -110,11 +110,13 @@ body {
     background-color: #3C5A99;
     padding: 30px;
     margin: 0px;
+    height: 40px;
 }
 
 #searchnavbar > .backicon {
     float: left;
     padding: 1%;
+    padding:8px;
 }
 #searchnavbar > .textbox {
     font-size: 34px;
@@ -124,16 +126,17 @@ body {
 }
 
 #searchnavbar > .SearchBox {
-    width: 55%;
+    width: 280px;
     height:40px;
     float: right;
+    padding-right:20px;
 }
 
 #searchnavbar > .SearchBox > form > input {
     border: solid 0px;
     width: 100%;
     height:40px;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 .navbar {
@@ -201,33 +204,49 @@ body {
 
 .results {
     border: solid #000;
-    margin-left:10%;
-    margin-right:10%;
-    border-radius: 10px;
+    margin-left:45px;
+    margin-right:45px;
+    border-radius: 15px;
     border-width: 1px;
-    margin-top:5%;
-    margin-bottom:5%;
+    margin-top:22.5px;
+    margin-bottom:22.5px;
     font-size:20px;
+    color: #888888;
+    text-align:left;
+    height:120px;
 }
 
-.results > .firstline {
-    width: 100%;
-    height: 4vh;
+.results > .firstline > .stock-name {
+    padding-left:7px;
+    font-size:140%;
 }
 
-.results > .firstline > .live-price {
-    float: left;
-    padding-left: 5%;
-    font-size: 225%;
-    height: 37px;
+.results > .stock-code {
+    padding-left:7px;
+    font-size:100%;
 }
 
-.results > .firstline > .price-change {
-    float: right;
-    padding-right: 10%;
+.results > .third-line {
+    overflow: hidden;
+}
+.results > .third-line >.stock-price {
+    padding-left:7px;
+    font-size:180%;
+    color: #222222;
+    float:left;
+}
+
+.results > .third-line > .stock-change {
+    padding-top:15px;
+    text-align: left;
+    float:left;
+}
+
+.results > .stock-details {
     font-size: 100%;
     height: 37px;
-    padding-top:1.5vh;
+    padding-left:7px;
+    font-size:75%;
 }
 
 .homepage {
