--- a/src/css/style.css
+++ b/src/css/style.css
@@ -128,6 +128,29 @@ body {
     line-height: 200%;
 }
 
+.purchase-by-box > .label2 {
+    float:left;
+    margin-left:30px;
+    margin-top:30px;
+    font-size:18px;
+    line-height: 100%;
+    color:#888888;
+}
+
+.purchase-by-box > .entry > input {
+    float:left;
+    margin-left:110px;
+    margin-top:30px;
+    font-size:18px;
+    width: 70px;
+    line-height: 100%;
+    color:#888888;
+    border: 0;
+    outline: 0;
+    background: transparent;
+    border-bottom: solid #000;
+}
+
 .purchase-by-box > .button-container > .buy-button {
     float: left;
     width:106px;
@@ -168,6 +191,29 @@ body {
     margin-left:4px;
     font-size:20px;
     line-height: 200%;
+}
+
+.share-price-box > .label2 {
+    float:left;
+    margin-left:30px;
+    margin-top:30px;
+    font-size:18px;
+    line-height: 100%;
+    color:#888888;
+}
+
+.share-price-box > .entry > input {
+    float:left;
+    margin-left:100px;
+    margin-top:30px;
+    font-size:18px;
+    width: 70px;
+    line-height: 100%;
+    color:#888888;
+    border: 0;
+    outline: 0;
+    background: transparent;
+    border-bottom: solid #000;
 }
 
 .share-price-box > .button-container > .buy-button {
