--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,8 +50,8 @@ body {
     font-size: 30px;
     border-radius:8px;
     border:solid 1px #0DC800;
-    background-color:#0DC800;
-    color: white;
+    background-color:#FFFFFF;
+    color: #0DC800;
     line-height: 150%;
 }
 
@@ -63,8 +63,8 @@ body {
     margin-left:8px;
     border-radius:8px;
     border:solid 1px #F56363;
-    background-color:#FFFFFF;
-    color: #F56363;
+    background-color:#F56363;
+    color: #FFFFFF;
     line-height: 150%;
 }
 
