--- a/src/css/style.css
+++ b/src/css/style.css
@@ -445,6 +445,7 @@ body {
     color: #888888;
     text-align:left;
     height:120px;
+    visibility: hidden;
 }
 
 .results > .firstline > .stock-name {
