--- a/src/css/style.css
+++ b/src/css/style.css
@@ -365,7 +365,7 @@ body {
     padding-right:20px;
 }
 
-#searchnavbar > .SearchBox > form > input {
+#searchnavbar > .SearchBox > input {
     border: solid 0px;
     width: 100%;
     height:40px;
@@ -483,13 +483,36 @@ body {
 
 .homepage {
     font-size:100px;
-    text-align: left;
+    margin-top:400px;
 }
 
 .homepage > div {
-    text-align: right;
-    padding-right:5px;
-    color: #3C5A99
+    width: 200px;
+    height: 46px;
+    margin: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 20px;
+    border-radius:8px;
+    border:solid 1px #3c5a99;
+    text-align: center;
+    background-color: #3c5a99;
+    line-height: 45px;
+}
+
+.homepage > div > a:visited{
+    color:white;
+    text-decoration: none;
+}
+
+.homepage > div > a:link{
+    color:white;
+    text-decoration: none;
+}
+
+.homepage > div > a:active{
+    background-color: #0000ff;
+    text-decoration: none;
 }
 
 #search {
