--- a/src/css/style.css
+++ b/src/css/style.css
@@ -445,7 +445,7 @@ body {
     color: #888888;
     text-align:left;
     height:120px;
-    visibility: hidden;
+    display: none;
 }
 
 .results > .firstline > .stock-name {
