--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,6 +17,20 @@ body {
     padding-top:0px;
 }
 
+.logininfo {
+    float:right;
+    font-size: 16px;
+}
+
+.navbar > .logininfobar {
+    width:100%;
+    background-color: #3C5A99;
+    height:3vh;
+    line-height:1vh;
+    font-weight:bold;
+    font-family:Arial;
+}
+
 #sidebar {
     position: relative;
     display: flex;
